fixed the stylesheet issue now the page is formatted properly, next is to work on the javascript for prompts and to generate the password

--- a/Assets/style.css
+++ b/Assets/style.css
@@ -21,6 +21,7 @@ body {
   padding-top: 30px;
   padding-left: 20px;
   padding-right: 20px;
+  margin: auto;
 }
 
 header {
@@ -56,6 +57,7 @@ header {
 
 .card-footer {
   text-align: center;
+  
 }
 
 .card-footer::before {
